--- a/right.css
+++ b/right.css
@@ -75,22 +75,8 @@ p {
   background: #03a9f4;
 }
 
-.interests ul li {
-  list-style: none;
-  color: #333;
-  font-weight: 500;
-  margin: 10px 0;
-}
-
-.interests ul {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.interests ul li .fa {
-  color: #03a9f4;
-  font-size: 18px;
-  width: 20px;
+ul.responsipilities{
+  font-size:12px;
 }
 
 @media (max-width: 600px) {
